gcc/testsuite/gcc.c-torture/execute/compare-fp-4.x
@@ -1,0 +1,2 @@
+set options "-fno-trapping-math"
+return 0
